# vm

./: CMakeLists.txt  build_and_run.sh
include/core/: VirtualMachine.h  chunk.h  value.h  virtualmachine.h
include/debugger/: debugger.h
include/frontend/: compiler.h  file_io.h  parser.h  scanner.h  token.h
include/interpreter/: interpreter.h
src/: main.cpp
src/core/: CMakeLists.txt  VirtualMachine.cpp  chunk.cpp  value.cpp  virtualmachine.cpp
src/debugger/: CMakeLists.txt  debugger.cpp
src/frontend/: CMakeLists.txt  compiler.cpp  file_io.cpp  scanner.cpp
src/interpreter/: CMakeLists.txt  interpreter.cpp
test/: CMakeLists.txt
test/core/: test_chunk.cpp  test_chunk.h
